--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "time-grunt": "^0.3.1",
     "jshint-stylish": "^0.2.0"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "async": "~0.9.0",
     "mongodb": "~1.4.5",
